@@ -1,3 +1,9 @@
+
+Bugfixes
+--------
+- validation: fix SERVFAIL in case of CNAME to NXDOMAIN in a single zone
+
+
 Knot Resolver 2.2.0 (2018-03-28)
 ================================
 
